syntax = "proto3";

option java_package = "com.proto.data";
option java_multiple_files = true;

message Quiz {
  string _id = 1;
  string title = 2;
  string category = 3;
  string createDateTime = 5;
  repeated Question questions = 6;
}

message Question {
  string title = 1;
  int32 correct = 2;
  repeated string choices = 3;
}

message RequestFilterQuiz {
  string category = 1;
  repeated Quiz quizzes = 2;
}

message RequestSearchQuiz {
  string searchQuery = 1;
  repeated Quiz quizzes = 2;
}

message ExtractedQuiz {
  Quiz quiz = 1;
}

service FilterService {
  rpc Filter(RequestFilterQuiz) returns (stream ExtractedQuiz);
}

service SearchService {
  rpc Search(RequestSearchQuiz) returns (stream ExtractedQuiz);
}
